refactor: replace MapStruct with manual mappers for Person, Fisica, Contact, and Dependent entities
- Converted mappers from MapStruct to manually implemented classes for greater flexibility and control.
- Enhanced mapping logic and added circular reference handling.
- Aligned mapping methods with updated domain model.